--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "marked": "github:mattermost/marked#7041218f9bd64e4bdf9eb2de1b07be57c9050705",
     "mattermost-redux": "github:mattermost/mattermost-redux#477150436ac1871d0d63954c4f4f4d16ff692483",
     "moment-timezone": "0.5.23",
+    "node-sass": "^4.12.0",
     "pdfjs-dist": "2.0.489",
     "perfect-scrollbar": "0.8.1",
     "popmotion": "8.6.4",
@@ -109,7 +110,6 @@
     "mini-css-extract-plugin": "0.5.0",
     "mmjstool": "github:mattermost/mattermost-utilities",
     "mocha-junit-reporter": "1.18.0",
-    "node-sass": "4.11.0",
     "react-router-enzyme-context": "^1.2.0",
     "redux-mock-store": "1.5.3",
     "redux-persist-node-storage": "2.0.0",
