--- a/deployment-config.json
+++ b/deployment-config.json
@@ -1,9 +1,9 @@
 {
     "type": "sftp",
-    "host": "172.16.31.85",
+    "host": "172.16.39.32",
     "username": "root",
-    "password": "Aa123456",
+    "password": "1234",
     "port": 22,
-    "remotePath": "/home/go/bin/github.com/mattermost/mattermost-webapp",
+    "remotePath": "/home/joe/go/github/mattermost-webapp",
     "uploadOnSave": true
 }
